<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HearThis</string>
    <string name="sync_message">Ready to sync with the desktop application. Please make sure you have version 3.3.0 or later of HearThis installed on your computer. To start to sync using HearThis on the computer, on the More menu, click Sync with Android.</string>
    <string name="alt_sync_message">Or you can enter this code into the dialog on the desktop:</string>
    <string name="sync_desktop">Sync with desktop app</string>
    <string name="choose_passage">Choose passage</string>
    <string name="play_speaker">Play using speaker</string>
    <string name="Open">Open</string>
    <string name="Publish">Publish</string>
    <string name="Play">Play</string>
    <string name="Record">Record</string>
    <string name="Next">Next</string>
    <string name="title_activity_sync">SyncActivity</string>
    <string name="action_settings">Settings</string>
    <string name="scan">Scan</string>
    <string name="continue_button_caption">Continue</string>
    <string name="title_activity_choose_book">ChooseBookActivity</string>
    <string name="sync_success">Sync completed successfully!</string>
    <string name="choose_project">Choose a project</string>
    <string name="choose_book">Choose a book</string>
    <string name="choose_chapter">Choose a chapter</string>
    <string name="sync_title">Synchronize</string>
    <string name="record_title">HearThis Recording</string>
    <string name="text_scale">Text Scale</string>
    <string name="scale_pref_summary">Scale for recording text</string>
    <string name="hello_world">Hello world!</string>
    <string name="noProject">No projects found. Please choose a project in HearThis Desktop and synchronize it using the Sync button.</string>
    <string name="no_use_without_record">This program cannot record sound unless you grant it permission to do so</string>
    <string name="cannot_start_recording">Cannot start recording: no location to save the recording.</string>
    <string name="record_for_volume">HearThis would like to record audio to display your sound level so you can check it before recording</string>
    <string name="notification_for_sync">HearThis needs to show a notification so you know the sync is running and to prevent the system from interrupting it.</string>
    <string name="need_permissions">Permission wanted</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="record_too_short">Hold down the record button while talking, and only let it go when you\'re done.</string>
    <string name="sync_service_channel_name">Sync Service Channel</string>
    <string name="receiving_file">receiving %1$s</string>
    <string name="receive_failed">failed to receive %1$s</string>
    <string name="sending_file">sending %1$s</string>
    <string name="ip_error">Something Wrong! %1$s</string>

</resources>
