<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="org.sil.hearthis.SyncActivity">

    <TextView
        android:id="@+id/instructions"
        android:text="@string/sync_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop = "true" />
    <Button android:id="@+id/scan_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below = "@+id/instructions"
        android:text="@string/scan" />
    <TextView android:id="@+id/ip_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below = "@+id/scan_button"
        />
    <TextView
        android:id="@+id/alternativeSync"
        android:text="@string/alt_sync_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below = "@+id/ip_address" />
    <TextView android:id="@+id/our_ip_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        style="@android:style/TextAppearance.Large"
        android:layout_below = "@+id/alternativeSync"
        />
    <TextView android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below = "@+id/our_ip_address" />

</RelativeLayout>
