<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/recordActivityRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="*">

    <TableRow
        android:id="@+id/recordTextRow"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <org.sil.hearthis.LinesView
            android:id="@+id/zoomView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_span="3">
            <ScrollView
                android:id="@+id/textScrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:background="@color/mainBackground" >
                <LinearLayout
                    android:id="@+id/textLineHolder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/mainBackground" >
                </LinearLayout>
            </ScrollView>
        </org.sil.hearthis.LinesView>

    </TableRow>

    <TableRow
        android:id="@+id/recordControlsRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" >

        <org.sil.hearthis.PlayButton
            android:id="@+id/playButton"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/Play" />

        <org.sil.hearthis.RecordButton
            android:id="@+id/recordButton"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/Record" />

        <org.sil.hearthis.NextButton
            android:id="@+id/nextButton"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/Next" />

    </TableRow>

    <TableRow
        android:id="@+id/levelRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp">
        <org.sil.hearthis.LevelMeterView
            android:id="@+id/levelMeter"
            android:layout_height="20dp"
            android:layout_width="0dp"
            android:layout_weight="1"/>
    </TableRow>

</TableLayout>
